# emu-6502

./: .gitignore  Cargo.toml  README.md  index.html
assets/: sw.js
src/: cpu.rs  emulator.rs  file.rs  frontend.rs  lib.rs  main.rs
test_programs/: blink.s
tests/: functional_tests.rs
tests/listings/: 6502_functional_test.lst  6502_interrupt_test.lst  65C02_extended_opcodes_test.lst
tests/src/: 6502_functional_test.a65  6502_interrupt_test.a65  65C02_extended_opcodes_test.a65c  fix-names.sh
